--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ cache: packages
 warnings_are_errors: false
 os:  linux
 before_install:
-    - sudo apt-get install libgsl0ldbl gsl-bin libgsl0-dev
+    - sudo apt-get update
+    - sudo apt-get install gsl-bin
+    - sudo apt-get install libgsl0-dev
  
