--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ warnings_are_errors: false
 os:  linux
 before_install:
     - sudo apt-get update
+    - sudo apt-get install libgsl0ldbl
+    - sudo apt-get install libgsl2
     - sudo apt-get install gsl-bin
     - sudo apt-get install libgsl0-dev
  
